tests/parser/bad/exps/exp_t-builtin-id-with.scilexp
(* 'field' is an invalid identifier *)
builtin add field field
